--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toxy",
   "version": "0.1.0",
-  "description": "Hackable HTTP proxy to simulate system failure conditions",
+  "description": "Pluggable HTTP proxy to simulate system failure conditions",
   "repository": "h2non/rocky",
   "author": "Tomas Aparicio",
   "license": "MIT",
@@ -25,9 +25,9 @@
     "nar": "nar create -e --os linux --arch x64 && nar create -e --os darwin --arch x64"
   },
   "dependencies": {
+    "debug": "^2.2.0",
     "midware": "^0.1.3",
-    "rocky": "^0.3.2",
-    "throttle": "^1.0.3",
+    "rocky": "^0.3.3",
     "yargs": "^3.15.0"
   },
   "devDependencies": {
