--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "toxy",
   "version": "0.1.0",
-  "description": "Pluggable HTTP proxy to simulate system failure conditions",
-  "repository": "h2non/rocky",
+  "description": "Hackable HTTP proxy to simulate multiple server failures and unexpected conditions",
+  "repository": "h2non/toxy",
   "author": "Tomas Aparicio",
   "license": "MIT",
+  "directories": {
+    "lib": "./lib"
+  },
   "keywords": [
     "http",
     "proxy",
@@ -15,7 +18,12 @@
     "resilency",
     "fuzz",
     "evil",
-    "testing"
+    "testing",
+    "failure",
+    "resilient",
+    "retry",
+    "unexpected",
+    "backoff"
   ],
   "engines": {
     "node": ">= 0.12"
@@ -25,15 +33,12 @@
     "nar": "nar create -e --os linux --arch x64 && nar create -e --os darwin --arch x64"
   },
   "dependencies": {
-    "debug": "^2.2.0",
     "midware": "^0.1.3",
-    "rocky": "^0.3.3",
-    "yargs": "^3.15.0"
+    "rocky": "^0.3.3"
   },
   "devDependencies": {
     "chai": "^3.0.0",
     "mocha": "^2.2.5",
-    "request": "^2.58.0",
     "sinon": "^1.15.3",
     "supertest": "^1.0.1"
   }
