--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toxy",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha.0",
   "description": "Hackable HTTP proxy to simulate multiple server failures and unexpected conditions",
   "repository": "h2non/toxy",
   "author": "Tomas Aparicio",
