--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "nar": "nar create -e --os linux --arch x64 && nar create -e --os darwin --arch x64"
   },
   "dependencies": {
+    "i": "^0.3.3",
     "midware": "^0.1.3",
+    "raw-body": "^2.1.2",
     "rocky": "^0.3.3"
   },
   "devDependencies": {
