--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "router": "^1.1.3"
   },
   "devDependencies": {
+    "async": "^1.4.2",
     "chai": "^3.0.0",
     "clone": "^1.0.2",
     "express": "^4.13.2",
