--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toxy",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "Hackable HTTP proxy to simulate server failure scenarios and unexpected network conditions",
   "repository": "h2non/toxy",
   "author": "Tomas Aparicio",
@@ -26,7 +26,10 @@
     "backoff",
     "network",
     "latency",
-    "jitter"
+    "jitter",
+    "failover",
+    "distributed",
+    "soa"
   ],
   "engines": {
     "node": ">= 0.12"
