feat(version): bump

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toxy",
-  "version": "0.3.5",
-  "description": "Hackable HTTP proxy to simulate server failure scenarios and unexpected network conditions",
+  "version": "0.3.6",
+  "description": "Hackable HTTP proxy to simulate server failure scenarios and network conditions",
   "repository": "h2non/toxy",
   "author": "Tomas Aparicio",
   "license": "MIT",
@@ -16,11 +16,11 @@
     "tolerant",
     "testing",
     "resiliency",
+    "resilient",
     "fuzz",
     "evil",
     "testing",
     "failure",
-    "resilient",
     "retry",
     "unexpected",
     "backoff",
